[package]
name = "rougelike-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tcod = "0.15"
tcod = { git= "https://github.com/tomassedovic/tcod-rs.git", features = ["serialization"]}
rand = "0.3.9"
soloud = "1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
#serde_traitobject = "0.2.7"
#erased-serde = "0.3"
typetag = "0.1"
configparser = "3.0.0"
simple_logger = "2.1.0"
log = "0.4"
lazy_static = "1.4.0"